# paint_by_numbers

./: CMakeLists.txt  README.md  app_config.h  main.cpp
logger/: CMakeLists.txt  app_logger.cpp  app_logger.h
